<resources>
    <string name="app_name">Flatmates Task Reminder</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_task">AddTaskActivity</string>
    <string name="task_name_desc">edit text task name</string>
    <string name="task_desc_desc">edit text task description</string>
    <string name="task_name_required">Task name can not be empty</string>
    <string name="task_added">Task has been added</string>
    <string name="desc_add_task_button">add task button</string>
    <string name="add_task">Add Task</string>
    <string name="menu_label_delete_task">DELETE TASK</string>
    <string name="task_deleted">Task has been deleted</string>
    <string name="task_updated">Task has been updated</string>
    <string name="btn_label_update_task">Update Task</string>
    <string name="cb_text_recurring">Recurring</string>
    <string name="btn_text_delete_task">DELETE TASK</string>
    <string name="hint_task_name">Task name</string>
    <string name="hint_small_task_description">Small task description</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_header_text">Recent Task</string>
    <string name="repeated_reminder_wt">REAPEATED REMINDER ON</string>
    <string name="cd_widget_header_text">Widget Header Text</string>
    <string name="cd_widget_task_name">widget task name</string>
    <string name="cd_widget_task_description">widget task description</string>
    <string name="cd_widget_task_recurring_information">widget task recurring information</string>
    <string name="confirm_clear_reminder_title">Are you sure?</string>
    <string name="confirm_clear_reminder_message">If you choose Ok then all upcoming reminder will be delete. But you can re enable them by updating the task.</string>
    <string name="confirm_clear_reminder_pos_btn">Ok</string>
    <string name="confirm_clear_reminder_neg_btn">Cancel</string>
    <string name="clear_reminder_success_msg">All reminders has been cleared</string>
    <string name="task_list">Task list</string>
    <string name="cd_row_item_list">Perticular item in list</string>
</resources>
