<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#09C"
    android:padding="@dimen/widget_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cd_widget_header_text"
            android:gravity="center_horizontal"
            android:text="@string/widget_header_text"
            android:background="@color/widget_header_stripe"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/wtv_task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cd_widget_task_name"
            android:paddingTop="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead.Inverse"
            android:textStyle="bold"
            tools:text="Task Name" />

        <TextView
            android:id="@+id/wtv_task_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cd_widget_task_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead.Inverse"
            android:textSize="14sp"
            tools:text="@string/hint_small_task_description" />

        <TextView
            android:id="@+id/wtv_task_recur_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cd_widget_task_recurring_information"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead.Inverse"
            android:textSize="14sp"
            tools:text="task recurring day" />

    </LinearLayout>

</RelativeLayout>